<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragment.FragmentAssigningWork">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/datecardContainer"
                    style="@style/card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/orange"
                    app:contentPadding="5dp">

                    <TextView
                        android:id="@+id/datePicker"
                        style="@style/edittextstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/date"
                        android:drawableRight="@drawable/date"
                        android:padding="10dp"
                        android:text="@string/date" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/datecardContainer"
                    android:layout_marginTop="40dp"
                    app:cardBackgroundColor="@color/orange"
                    app:contentPadding="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/simpleSpinner"
                        style="@style/edittextstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:hint="@string/select_employee"
                        android:theme="@style/Autocomplete"
                        app:backgroundTint="@color/white" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/remarks_forAssign"
                style="@style/edittextstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="15dp"
                android:gravity="left"
                android:drawableLeft="@drawable/edit"
                app:backgroundTint="@color/orange"
                android:hint="@string/remarks"
                android:drawablePadding="20dp"
                android:textColor="@color/gradish"
                android:textColorHint="@color/gradish"
                android:drawableStart="@drawable/edit" />


            <Button
                android:id="@+id/buttonassign"
                style="@style/buttonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:text="@string/assign" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>