<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_checkin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".fragment.FragmentCheckIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                style="@style/card_style"
                android:layout_margin="5dp"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    style="@style/edittextstyle"
                    android:id="@+id/username"
                    android:gravity="center"
                    android:text="@string/hello_user"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    style="@style/card_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/orange">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            style="@style/edittextstyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/Ttl_cin"
                            android:textColor="@color/snow"
                            android:textSize="20sp" />

                        <TextView
                            style="@style/edittextstyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/snow"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <!--

                                <android.support.v7.widget.CardView
                                    style="@style/card_style"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="5dp"
                                    android:layout_weight="1"
                                    app:cardBackgroundColor="@color/orange">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/edittextstyle"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/avai_leave"
                                            android:textColor="@color/snow"
                                            android:textSize="18sp" />

                                        <TextView
                                            style="@style/edittextstyle"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="20dp"
                                            android:gravity="center"
                                            android:text="0"
                                            android:textColor="@color/snow"
                                            android:textSize="20sp" />
                                    </LinearLayout>
                                </android.support.v7.widget.CardView>-->
            </LinearLayout>
<!--
            <RelativeLayout
                android:id="@+id/checkinContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardcheckinstatus"
                    style="@style/card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="20dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/edittextstyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1.9"
                            android:text="@string/cinout_switch" />

                        <Switch
                            android:track="@drawable/customswitch"
                            android:id="@+id/attendance_switch"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:gravity="fill"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>-->

            <RelativeLayout
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/breakcard"
                    style="@style/card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/edittextstyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1.9"
                            android:text="@string/break_msg" />

                        <Switch
                            android:id="@+id/break_switch"
                            android:layout_width="30dp"
                            android:track="@drawable/customswitch"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:gravity="fill"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>